[gd_scene load_steps=4 format=3 uid="uid://dqe15vfr2i477"]

[ext_resource type="FontFile" uid="uid://kl7l1rnj2f6v" path="res://assets/Myfont-Regular.ttf" id="1_7t6pa"]
[ext_resource type="Script" path="res://scenes/gameover_scene/gameover_scene.gd" id="1_e2l8b"]
[ext_resource type="Texture2D" uid="uid://bm5pe5wjjh12p" path="res://assets/nine_patch_botton_texture.png" id="2_8a15w"]

[node name="GameoverScene" type="Node2D"]
script = ExtResource("1_e2l8b")

[node name="BackgroundColorCanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="BackgroundColorRect" type="ColorRect" parent="BackgroundColorCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
metadata/_edit_lock_ = true

[node name="UICanvasLayer" type="CanvasLayer" parent="."]

[node name="GameNameLabel" type="Label" parent="UICanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 64.0
offset_bottom = 320.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7t6pa")
theme_override_font_sizes/font_size = 124
text = "Game
Over"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="YourScoreLabel" type="Label" parent="UICanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 384.0
offset_bottom = 448.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7t6pa")
theme_override_font_sizes/font_size = 48
text = "Your Score: 0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HighScoreLabel" type="Label" parent="UICanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 448.0
offset_bottom = 512.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7t6pa")
theme_override_font_sizes/font_size = 36
text = "High Score: 0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="RestartGameButton" type="TextureButton" parent="UICanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -168.0
offset_top = -160.0
offset_right = 168.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="UICanvasLayer/RestartGameButton"]
layout_mode = 0
offset_right = 336.0
offset_bottom = 120.0
texture = ExtResource("2_8a15w")
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="UICanvasLayer/RestartGameButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7t6pa")
theme_override_font_sizes/font_size = 64
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[connection signal="pressed" from="UICanvasLayer/RestartGameButton" to="." method="_on_restart_game_button_pressed"]
